updated opconsult from VenuAjitesh:bugfix/fhir-op-resource